Changes from other authors
--------------------------

- [jjkkoo/ea0704f]
  change empty content msg of type 51 (ue init) to useless by default, user probably checking history messages on phone
- [terryso/269448b..849de6a] == [littlecodersh#829]
  修复bug: 状态码为408或者400, 需要重新扫码; 隔一秒再检查登录状态
- [huodongdong/0c56f1d] == [littlecodersh#769]
  fix upload_chuck_file fileName quote
- [wolfsilver/7a1919d]
  Fix 不能获取公众号头像


Changes from Eana Hufwe
-----------------------

- Download multiple files in batch will produce duplicated contents, [ews#30]
- Download multiple videos in batch will produce duplicated contents
- Raise `ConnectionError` instead of exit when failed to connect at beginning, [ews#50]
- Add thread names to threads
- Add type hints (partially)
- Remove Python 2 compatibility code
- Safely overwrite session file to mitigate loss of data caused by improper termination


[jjkkoo/ea0704f]: https://github.com/littlecodersh/ItChat/commit/ea0704ffbd814f888fbe48109bd764541807e523
[terryso/269448b..849de6a]: https://github.com/littlecodersh/ItChat/commit/849de6af022f6dfeef9a0334bea617df09681fea
[littlecodersh#829]: https://github.com/littlecodersh/ItChat/pull/829
[huodongdong/0c56f1d]: https://github.com/littlecodersh/ItChat/commit/0c56f1d314f643c3504e30a404e42945cf7df66f
[littlecodersh#769]: https://github.com/littlecodersh/ItChat/pull/769
[wolfsilver/7a1919d]: https://github.com/littlecodersh/ItChat/commit/7a1919d59d961d3a6a8ca84e7973dd97356800eb
[ews#30]: https://ews.1a23.studio/issues/30
[ews#50]: https://ews.1a23.studio/issues/50